[gd_scene format=3 uid="uid://cbc1dvm8rnnu3"]

[ext_resource type="Script" uid="uid://ccs50di4mbgfr" path="res://test.gd" id="1_8uh7m"]
[ext_resource type="Texture2D" uid="uid://dj0hua86tjho0" path="res://arrow_empty.png" id="2_6uqi0"]

[node name="Control" type="Control" unique_id=444151955]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_8uh7m")

[node name="TextureRect" type="Control" parent="." unique_id=557546119]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -172.0
offset_top = -60.0
offset_right = -92.0
offset_bottom = 20.0
grow_horizontal = 0
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="TextureRect" unique_id=1474660451]
layout_mode = 0
offset_right = 80.0
offset_bottom = 80.0
pivot_offset_ratio = Vector2(0.5, 0.5)
texture = ExtResource("2_6uqi0")
expand_mode = 1
stretch_mode = 5

[node name="Note_Control" type="Control" parent="." unique_id=448243739]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = -220.0
offset_top = -60.0
offset_right = -100.0
offset_bottom = 60.0
grow_vertical = 2

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="." unique_id=1364170656]

[node name="Label" type="Label" parent="." unique_id=1893732746]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -167.0
offset_top = 11.0
offset_right = -13.0
offset_bottom = 56.0
grow_horizontal = 0
theme_override_font_sizes/font_size = 32
text = "New Song"
horizontal_alignment = 2

[node name="Label2" type="Label" parent="." unique_id=86690314]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -73.0
offset_top = -174.5
offset_right = 73.0
offset_bottom = 174.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 256
text = "3"

[node name="Button" type="Button" parent="." unique_id=1487525148]
layout_mode = 0
offset_left = 5.0
offset_top = 7.0
offset_right = 229.0
offset_bottom = 60.0
theme_override_font_sizes/font_size = 32
text = "Back to Editor"

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
